kubernetes/overlays/playground/cronpilot-frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cronpilot-frontend
spec:
  selector:
    app: cronpilot-frontend
  ports:
    - port: 80
      targetPort: 80
