kubernetes/overlays/playground/cronpilot-frontend/svc-cronpilot-api.yaml
apiVersion: v1
kind: Service
metadata:
  name: cronpilot-api
spec:
  type: ExternalName
  externalName: cronpilot-api.cronpilot-api.svc.cluster.local
